Fix icon overlap of nav bar when hovering

--- a/personal-website/src/components/Navbar.css
+++ b/personal-website/src/components/Navbar.css
@@ -8,6 +8,7 @@
     font-weight: 510;
     width: 100%;
     list-style-type: none;
+    z-index: 999;
 }
 
 nav li {
